# close_pair_hmm

./: .gitignore  LICENSE  README.md  infer_pipelines.py  infer_utils.py  pyproject.toml  requirements.yml
Bf_test/: README.md  bf_datahelper.py  compare_to_ground_truth.py  generate_prior.py  infer_Bf.py
Bf_test/priors/: Bacteroides_fragilis_54507__prior_samples.csv
Bf_test/results/: Bacteroides_fragilis_54507__all_pairs__inference_summary.csv  Bacteroides_fragilis_54507__all_pairs__transfer_interval_overlap_comparison.csv  Bacteroides_fragilis_54507__all_pairs__transfer_summary.csv  Bacteroides_fragilis_54507__first_1_pairs__inference_summary.csv  Bacteroides_fragilis_54507__first_1_pairs__pair_event_count_comparison.csv  Bacteroides_fragilis_54507__first_1_pairs__transfer_interval_overlap_comparison.csv  Bacteroides_fragilis_54507__first_1_pairs__transfer_summary.csv  Bacteroides_fragilis_54507_ground_truth_transfers.csv  transfer_interval_overlap_comparison.csv
Isolate_test/: generate_prior.py  infer_isolates.py  isolate_datahelper.py
Isolate_test/priors/: MGYG-HGUT-01337.csv  MGYG-HGUT-01346.csv  MGYG-HGUT-01378.csv  MGYG-HGUT-02331.csv  MGYG-HGUT-02366.csv  (+4 more)
cphmm/: _cphmm_kernels.py  config.py  cphmm.py  datahelper.py  hmm_backend.py  infer_pipelines.py  model.py  prior.py  recomb_inference.py  seq_manip.py  tract_extension.py
docs/: architecture.md  concepts.md  tract_extension.md  transfer_length_iteration.md  usage.md
tests/: test_hmm_backend.py  test_qp_iterative_transfer_length.py  test_recomb_coordinates.py  test_tract_extension.py
(+665 files in other folders)
